--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.6
   http: ^1.2.1
   image_picker: ^1.0.7
+  google_nav_bar: ^5.0.6
+  intl: ^0.19.0
+  date_format_field: ^0.1.0
 
 dev_dependencies:
   flutter_test:
@@ -59,10 +62,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-assets:
-  - Image/checkedbag.png
-  - Image/handbag.png
-  - Image/personalbag.png
+  assets:
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
