--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   intl: ^0.19.0
   date_format_field: ^0.1.0
   flutter_rating_bar: ^4.0.1
+  shared_preferences: ^2.2.3
+  firebase_core: ^2.31.0
+  firebase_messaging: ^14.9.2
 
 dev_dependencies:
   flutter_test:
